bevægelse sammen med temperatur  hvor vi også har puttet en tilbage knap der så redirct dem tilbage til home

--- a/templates/home.html
+++ b/templates/home.html
@@ -122,14 +122,14 @@
                 <div class="card-icon">📅</div>
                 <h3>bevæglese i hjemmet</h3>
                 <p>her kan du se om der har været bevæglese sensoren registere hvert 10 min</p>
-                <a href="bevæglese" class="btn">Åbn</a>
+                <a href="{{ url_for('bevaegelse') }}" class="btn">Åbn</a>
             </div>
 
             <div class="dashboard-card">
                 <div class="card-icon">💊</div>
                 <h3>Temperatur og luftfugtighed</h3>
                 <p>Hold styr på temperatur og luftfugtighed fra sensoren</p>
-                <a href="#" class="btn">Åbn</a>
+                <a href="{{ url_for('temperatur_fugt') }}" class="btn">Åbn</a>
             </div>
 
             </div>
