--- a/templates/login.html
+++ b/templates/login.html
@@ -109,7 +109,7 @@
         </form>
         
         <div class="info">
-            Velkommen til Sundhedsapp
+            Velkommen til Health-care
         </div>
     </div>
 </body>
