main fejl og html fejl håndtering sammen med lidt mere pænt skrivelse og log i mappen da vi lige skulle have en måde tjekke log til hvad der sker når vi starter main.py op

--- a/templates/bevæglese.html
+++ b/templates/bevæglese.html
@@ -85,7 +85,7 @@
 <body>
     <div class="container">
         <a href="/home" class="home-btn">Tilbage</a>
-        <h1>🏃‍♂️ Bevægelse</h1>
+        <h1>🏃‍♂️ Bevægelse i stuen</h1>
         
         <table id="movementTable">
             <thead>
